--- a/diagnoza.html
+++ b/diagnoza.html
@@ -105,11 +105,9 @@
 									<li><a href="rokowania.html">Rokowania</a></li>
 								</ul>
 							</li>
-
 							<li class="active"><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -212,9 +210,9 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 animate-box">
 				<div class="date-counter text-center">
-					<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+					<h2>Co prawie dwie godziny jedna kobieta w Polsce odkrywa nowotwór jajnika:</h2>
 					<div class="simply-countdown simply-countdown-one"></div>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
+					<p><a href="objawy.html" class="btn btn-primary btn-lg btn-reg">Poznaj objawy nowotworu</a></p>
 				</div>
 			</div>
 		</div>
