--- a/kontakt.html
+++ b/kontakt.html
@@ -66,7 +66,74 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<style>
+        .custom-body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: flex-end; /* Ustawiamy do prawej strony */
+            align-items: flex-end; /* Ustawiamy na dół */
+            height: 0;
+            background-color: #f4f4f4;
+        }
 
+        .chatbox-container {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+        }
+		.message {
+			color: black;
+		}
+        .chatbox {
+            width: 300px;
+			position: fixed;
+			right: 10px;
+			bottom: 80px;
+			background-color: rgb(250, 222, 227);
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            overflow: hidden;
+            display: none; /* Ukrywamy chatbox na początku */
+        }
+
+        .chat-log {
+            height: 200px;
+            overflow-y: auto;
+            padding: 10px;
+        }
+
+        .chat-input {
+            display: flex;
+            padding: 10px;
+        }
+
+        #message-input {
+            flex-grow: 1;
+            padding: 5px;
+			
+        }
+
+        button {
+            padding: 5px 10px;
+            margin-left: 5px;
+            cursor: pointer;
+        }
+
+        .open-chatbox-button {
+            position: fixed;
+            bottom: 20px;
+            right: 80px;
+            padding: 10px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+			
+        }
+    </style>
 	</head>
 	<body>
 		
@@ -203,9 +270,9 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 animate-box">
 				<div class="date-counter text-center">
-					<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+					<h2>Co prawie dwie godziny jedna kobieta w Polsce odkrywa nowotwór jajnika:</h2>
 					<div class="simply-countdown simply-countdown-one"></div>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
+					<p><a href="objawy.html" class="btn btn-primary btn-lg btn-reg">Poznaj objawy nowotworu</a></p>
 				</div>
 			</div>
 		</div>
@@ -275,9 +342,94 @@
 		</div>
 	</footer>
 	</div>
-
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+	</div>
+	<div class="custom-body">
+		<!-- Dodajemy przycisk do otwierania chatboxa -->
+		<button class="open-chatbox-button" onclick="toggleChatbox()">Open Chatbox</button>
+
+		<!-- Kontener chatboxa -->
+		<div class="chatbox-container">
+			<!-- Sam chatbox -->
+			<div class="chatbox" id="chatbox" stu>
+				<div class="chat-log" id="chat-log"></div>
+				<div class="chat-input">
+					<input type="text" id="message-input" placeholder="Type your message...">
+					<button onclick="sendMessage()">Send</button>
+				</div>
+			</div>
+		</div>
+		
+	
+		<script>
+			// Funkcja do pokazywania/ukrywania chatboxa
+			var chatboxOpen = false;
+			var defaultMessageSet = false;
+
+			document.addEventListener("click", function(event) {
+				var chatbox = document.getElementById("chatbox");
+				var isClickInsideChatbox = event.target === chatbox || chatbox.contains(event.target);
+
+				if (isClickInsideChatbox && !chatboxOpen) {
+					// If the click is inside the closed chatbox, open it and display the default message
+					chatbox.style.display = "block";
+					displayDefaultMessage();
+					chatboxOpen = true;
+				} else if (!isClickInsideChatbox && chatboxOpen) {
+					// If the click is outside the open chatbox, close it
+					chatbox.style.display = "none";
+					chatboxOpen = false;
+				}
+			});
+			function displayDefaultMessage() {
+				if(!defaultMessageSet)
+				{
+					var chatLog = document.getElementById("chat-log");
+					var newMessage = document.createElement("div");
+					newMessage.className = "message";
+					newMessage.textContent = "Assistant: How can I help you?";
+					chatLog.appendChild(newMessage);
+	
+					// Optional: Scroll to the bottom of the chat log
+					chatLog.scrollTop = chatLog.scrollHeight;
+					defaultMessageSet = true;
+				}
+    }
+			function toggleChatbox() {
+				var chatbox = document.getElementById("chatbox");
+				chatbox.style.display = (chatbox.style.display === "none" || chatbox.style.display === "") ? "block" : "none";
+			}
+			document.getElementById("message-input").addEventListener("keydown", function(event) {
+			// Check if the pressed key is the "Enter" key
+			if (event.key === "Enter") {
+				// Prevent the default behavior (e.g., submitting a form)
+				event.preventDefault();
+
+				// Call the sendMessage function
+				sendMessage();
+			}
+		});
+			function sendMessage() {
+				var messageInput = document.getElementById("message-input");
+				var message = messageInput.value;
+	
+				if (message.trim() !== "") {
+					var chatLog = document.getElementById("chat-log");
+					var newMessage = document.createElement("div");
+					newMessage.className = "message";
+					newMessage.textContent = "You: "+ message;
+	
+					chatLog.appendChild(newMessage);
+	
+					// Clear the input field after sending the message
+					messageInput.value = "";
+	
+					// Optional: Scroll to the bottom of the chat log
+					chatLog.scrollTop = chatLog.scrollHeight;
+				}
+			}
+		</script>
 	</div>
 	
 	<!-- jQuery -->
