--- a/profilaktyka.html
+++ b/profilaktyka.html
@@ -153,9 +153,9 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2 animate-box">
 			<div class="date-counter text-center">
-				<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+				<h2>Co prawie dwie godziny jedna kobieta w Polsce odkrywa nowotwór jajnika:</h2>
 				<div class="simply-countdown simply-countdown-one"></div>
-				<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
+				<p><a href="objawy.html" class="btn btn-primary btn-lg btn-reg">Poznaj objawy nowotworu</a></p>
 			</div>
 		</div>
 	</div>
