--- a/wiedza.html
+++ b/wiedza.html
@@ -168,18 +168,6 @@
         <li>Rak sromu: Nowotwór, który rozwija się w sromie, zewnętrznej części narządów płciowych kobiecych. Srom obejmuje wejście do pochwy, zewnętrzne wargi sromowe (labia majora i labia minora) oraz łechtaczkę.</li>
     </ul>
 
-    <h2 style="color:rgb(234, 138, 219);">Gdzie znajdują się jajniki?</h2>
-    <p>Jajniki to dwa małe, migdałowate narządy w miednicy, dolnej części między biodrami. Znajdują się po obu stronach macicy. Jajniki przechowują jajka i wytwarzają żeńskie hormony estrogen i progesteron.</p>
-
-    <p>Jajnik składa się z trzech rodzajów komórek:</p>
-    <ul>
-        <li>Komórki nabłonkowe pokrywają powierzchnię jajnika. Pokrywają również jajowody.</li>
-        <li>Komórki zarodkowe są komórkami rozrodczymi jajników. Są również nazywane komórkami jajowymi lub oocytami.</li>
-        <li>Komórki mezodermalne tworzą pewne rodzaje tkanki łącznej. Produkują estrogen i progesteron.</li>
-    </ul>
-
-    <p>Najczęstszy typ raka jajnika zaczyna się w komórkach nabłonkowych. Stanowi to około 85% do 90% wszystkich przypadków raka jajnika. Raki komórek jajowych i rak mezodermalnych są rzadsze.</p>
-
     <h2 style="color:rgb(234, 138, 219);">Co powoduje raka jajnika?</h2>
     <p>Dokładna przyczyna raka jajnika jest nieznana. Istnieje wiele koncepcji na temat tego, co powoduje chorobę. Rak jajnika zaczyna się, gdy DNA komórek jajników ulega mutacji. DNA zawiera instrukcje, które mówią komórce, co robić. Gdy DNA ulega mutacji, mówi komórkom, aby szybko rosły i się mnożyły. Powstaje masowa ilość komórek nowotworowych, które nadal rosną, podczas gdy zdrowe komórki umierają.</p>
 
@@ -187,11 +175,25 @@
 
 		Mutacje nabyte to mutacje genów, które pojawiają się w ciągu życia człowieka. Przyczyna większości nabytych mutacji jest obecnie nieznana. Jednak większość nowotworów jajnika ma kilka nabytych mutacji, w tym TP53, PTEN i PALB2. Chociaż nie jest znany sposób zapobiegania rakowi jajnika, istnieją pewne rzeczy, które mogą zmniejszyć ryzyko, w tym: </p>
 		<ul>
-		<li>Ciąża</li>
-		<li>Tabletki antykoncepcyjne</li>
-		<li>Podwiązanie jajowodów</li>
-		<li>Usunięcie macicy</li>
+		<li>ciąża,</li>
+		<li>tabletki antykoncepcyjne,</li>
+		<li>oodwiązanie jajowodów,</li>
+		<li>usunięcie macicy.</li>
 	</ul>	
+
+	<h2 style="color:rgb(234, 138, 219);">Kto jest w grupie ryzyka?</h2>
+	<p>Rak jajnika jest chorobą, której rozwój może być wywołany przez różnorodne czynniki. Należy jednak zaznaczyć, że występowanie czynnika ryzyka u kobiety nie oznacza, że rak jajnika na pewno się u niej rozwinie. Wśród głównych czynników ryzyka wymienia się:</p>
+	<ul>
+		<li>wiek powyżej 50. lat,</li>
+		<li>przebycie menopauzy,</li>
+		<li>historia występowania raka jajnika i piersi w rodzinie,</li>
+		<li>odziedziczone mutacje genów BRCA1 i BRCA2,</li>
+		<li>stymulacja owulacji,</li>
+		<li>endometrioza,</li>
+		<li>niepłodnosć, bezdzietność,</li>
+		<li>nadwaga,</li>
+		<li>palenie papierosów.</li>
+	</ul>
 	<h2 style="color:rgb(234, 138, 219);">Jak diagnozuje się raka jajnika?</h2>
 	<p>Nie istnieje test wczesnego wykrywania ani skuteczne narzędzie przesiewowe do identyfikacji raka jajnika. Jedynym skutecznym środkiem diagnostycznym jest przeprowadzenie operacji, podczas której lekarz może przeprowadzić biopsję w celu pobrania tkanki z guza. Patolog analizuje te tkanki, aby ustalić obecność raka. W przypadku wystąpienia objawów lub podejrzeń dotyczących raka jajnika istnieją jednak badania, które mogą pomóc w postawieniu diagnozy. Te procedury obejmują:</p>
 		<ul>
@@ -209,9 +211,9 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2 animate-box">
 			<div class="date-counter text-center">
-				<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+				<h2>Co prawie dwie godziny jedna kobieta w Polsce odkrywa nowotwór jajnika:</h2>
 				<div class="simply-countdown simply-countdown-one"></div>
-				<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
+				<p><a href="objawy.html" class="btn btn-primary btn-lg btn-reg">Poznaj objawy nowotworu</a></p>
 			</div>
 		</div>
 	</div>
