--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			   				<div class="slider-text-inner">
 			   					<h1>Nie bądź obojętna</h1>
 									<h2>Rak jajnika to jedna z najbardziej podstępnych form nowotworu u kobiet. Co roku tysiące kobiet na całym świecie dowiaduje się o diagnozie. Na tym slajdzie znajdziesz kluczowe fakty i statystyki, abyśmy mogli razem podjąć walkę z tą chorobą.</a></h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Czytaj więcej</a></p>
+									<p><a class="btn btn-primary btn-lg btn-learn" href="wiedza.html">Czytaj więcej</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -142,7 +142,7 @@
 							<div class="slider-text-inner">
 								<h1>Tykająca bomba</h1>
 								 <h2>Czas na rozmowę o ważnej kwestii zdrowia kobiet - raku jajnika. Ten cichy zabójca często rozwija się bezobjawowo, dlatego wiedza na jego temat jest kluczowa. Dowiedz się, jak rozpoznać sygnały alarmowe i dlaczego wczesne wykrycie może być kluczowe dla skutecznego leczenia.</a></h2>
-								 <p><a class="btn btn-primary btn-lg" href="#">Czytaj więcej</a></p>
+								 <p><a class="btn btn-primary btn-lg" href="objawy.html">Czytaj więcej</a></p>
 							</div>
 						</div>
 					</div>
@@ -156,7 +156,7 @@
 			   				<div class="slider-text-inner">
 			   					<h1> Łączymy siły</h1>
 									<h2>Rak jajnika wymaga uwagi i zaangażowania społeczności. Razem możemy tworzyć świadomość, wspierać się nawzajem i pracować nad poprawą diagnozy oraz leczenia tej poważnej choroby.</a></h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Czytaj więcej</a></p>
+									<p><a class="btn btn-primary btn-lg btn-learn" href="wsparcie.html">Czytaj więcej</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -170,8 +170,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Course categories</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2 style="color:rgb(234, 138, 219);">ZROZUMIENIE RAKA JAJNIKA</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -308,109 +307,6 @@
 		</div>
 	</div>
 
-	<div id="fh5co-course">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Our Course</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-1.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Web Master</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-2.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Business &amp; Accounting</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-3.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Science &amp; Technology</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-4.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Health &amp; Psychology</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Take A Course</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-testimonial" style="background-image: url(images/school.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2><span>Testimonials</span></h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-10 col-md-offset-1">
-					<div class="row animate-box">
-						<div class="owl-carousel owl-carousel-fullwidth">
-							<div class="item">
-								<div class="testimony-slide active text-center">
-									<div class="user" style="background-image: url(images/person1.jpg);"></div>
-									<span>Mary Walker<br><small>Students</small></span>
-									<blockquote>
-										<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-									</blockquote>
-								</div>
-							</div>
-							<div class="item">
-								<div class="testimony-slide active text-center">
-									<div class="user" style="background-image: url(images/person2.jpg);"></div>
-									<span>Mike Smith<br><small>Students</small></span>
-									<blockquote>
-										<p>&ldquo;Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-									</blockquote>
-								</div>
-							</div>
-							<div class="item">
-								<div class="testimony-slide active text-center">
-									<div class="user" style="background-image: url(images/person3.jpg);"></div>
-									<span>Rita Jones<br><small>Teacher</small></span>
-									<blockquote>
-										<p>&ldquo;Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-									</blockquote>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	<div id="fh5co-O mnie">
 		<div class="container">
 			<div class="row animate-box">
@@ -424,7 +320,6 @@
 					<div class="fh5co-event">
 						<div class="date text-center"><span>9<br>Lutego</span></div><h3><a href="#">Konferencja Naukowa pt. RAK JAJNIKA - PROBLEM WIELODYSCYPLINARNY</a></h3>
 						<p>Z przyjemnością zapraszamy na konferencję, która odbędzie się już 9 lutego w Lublinie. Głównym celem spotkania będzie szerokie omówienie tematu diagnostyki i leczenia tego typu nowotworu.</p>
-						<p><a href="#">Czytaj Więcej</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 animate-box">
@@ -432,7 +327,6 @@
 						<div class="date text-center"><span>8<br>Maja</span></div>
 						<h3><a href="#">Światowy Dzień Świadomości Raka Jajnika</a></h3>
 						<p>Niech światowa świadomość raka jajnika będzie naszym wspólnym celem. 8 maja - Dzień Walki i Edukacji. #WspólnieMocniejsi 💙🌐</p>
-						<p><a href="#">Czytaj więcej</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 animate-box">
@@ -440,146 +334,8 @@
 						<div class="date text-center"><span>17<br>Lipca</span></div>
 						<h3><a href="#">Webinar nt. CA 125 i HE4 w diagnostyce biochemicznej raka jajnika</a></h3>
 						<p>Dołącz do naszego fascynującego webinaru nt. CA 125 i HE4 w diagnostyce raka jajnika! Poznaj najnowsze doniesienia z dziedziny biochemicznej diagnostyki, rozwijaj swoją wiedzę i zdobądź unikalne perspektywy od ekspertów.</p>
-						<p><a href="#">Czytaj Więcej</a></p>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-1.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-2.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-3.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-wsparcie" class="fh5co-bg-section">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Plan &amp; wsparcie</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="wsparcie wsparcie--rabten">
-					<div class="col-md-4 animate-box">
-						<div class="wsparcie__item">
-							<div class="wrap-price">
-								 <!-- <div class="icon icon-user2"></div> -->
-	                     <h3 class="wsparcie__title">Trial</h3>
-	                     <!-- <p class="wsparcie__sentence">Single user license</p> -->
-							</div>
-                     <div class="wsparcie__price">
-                        <span class="wsparcie__anim wsparcie__anim--1">
-								<span class="wsparcie__currency">$</span>0
-                        </span>
-                        <span class="wsparcie__anim wsparcie__anim--2">
-								<span class="wsparcie__period">per year</span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="wsparcie__feature-list">
-	                        <li class="wsparcie__feature">One Day Trial</li>
-	                        <li class="wsparcie__feature">Limited wiedza</li>
-	                        <li class="wsparcie__feature">Free 3 Lessons</li>
-	                        <li class="wsparcie__feature">No Supporter</li>
-	                        <li class="wsparcie__feature">No Tutorial</li>
-	                        <li class="wsparcie__feature">No Ebook</li>
-	                         <li class="wsparcie__feature">Limited Registered User</li>
-	                     </ul>
-	                     <button class="wsparcie__action">Choose plan</button>
-                     </div>
-                  </div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="wsparcie__item">
-							<div class="wrap-price">
-								<!-- <div class="icon icon-store"></div> -->
-	                     <h3 class="wsparcie__title">Silver</h3>
-	                     <!-- <p class="wsparcie__sentence">Up to 5 users</p> -->
-							</div>
-                     <div class="wsparcie__price">
-                        <span class="wsparcie__anim wsparcie__anim--1">
-								<span class="wsparcie__currency">$</span>79
-                        </span>
-                        <span class="wsparcie__anim wsparcie__anim--2">
-								<span class="wsparcie__period">per year</span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="wsparcie__feature-list">
-	                        <li class="wsparcie__feature">One Year Standard Access</li>
-	                        <li class="wsparcie__feature">Limited wiedza</li>
-	                        <li class="wsparcie__feature">300+ Lessons</li>
-	                        <li class="wsparcie__feature">Random Supporter</li>
-	                        <li class="wsparcie__feature">View Only Ebook</li>
-	                        <li class="wsparcie__feature">Standard Tutorials</li>
-	                         <li class="wsparcie__feature">Unlimited Registered User</li>
-	                     </ul>
-	                     <button class="wsparcie__action">Choose plan</button>
-                     </div>
-                 </div>
-					</div>
-					<div class="col-md-4 animate-box">
-                  <div class="wsparcie__item">
-                  	<div class="wrap-price">
-                  		<!-- <div class="icon icon-home2"></div> -->
-	                     <h3 class="wsparcie__title">Gold</h3>
-	                     <!-- <p class="wsparcie__sentence">Unlimited users</p> -->
-							</div>
-                     <div class="wsparcie__price">
-                        <span class="wsparcie__anim wsparcie__anim--1">
-								<span class="wsparcie__currency">$</span>499
-                        </span>
-                        <span class="wsparcie__anim wsparcie__anim--2">
-								<span class="wsparcie__period">per year</span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="wsparcie__feature-list">
-	                        <li class="wsparcie__feature">Life Time Access</li>
-	                        <li class="wsparcie__feature">Unlimited All wiedza</li>
-	                        <li class="wsparcie__feature">7000+ Lessons &amp; Growing</li>
-	                        <li class="wsparcie__feature">Free Supporter</li>
-	                        <li class="wsparcie__feature">Free Ebook Downloads</li>
-	                        <li class="wsparcie__feature">Premium Tutorials</li>
-	                         <li class="wsparcie__feature">Unlimited Registered User</li>
-	                     </ul>
-	                     <button class="wsparcie__action">Choose plan</button>
-                     </div>
-                  </div>
-               </div>
-            </div>
 			</div>
 		</div>
 	</div>
@@ -589,9 +345,9 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 animate-box">
 				<div class="date-counter text-center">
-					<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+					<h2>Co prawie dwie godziny jedna kobieta w Polsce odkrywa nowotwór jajnika:</h2>
 					<div class="simply-countdown simply-countdown-one"></div>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
+					<p><a href="objawy.html" class="btn btn-primary btn-lg btn-reg">Poznaj objawy nowotworu</a></p>
 				</div>
 			</div>
 		</div>
@@ -602,64 +358,20 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-3 fh5co-widget">
-					<h3>leczenie Education</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<p>OvarianGuide</p>
 				</div>
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-					<h3>Learning</h3>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Course</a></li>
-						<li><a href="#">O mnie</a></li>
-						<li><a href="#">kontakt</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-					<h3>Learn &amp; Grow</h3>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">O mnie</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-					<h3>Engage us</h3>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Marketing</a></li>
-						<li><a href="#">Visual Assistant</a></li>
-						<li><a href="#">System Analysis</a></li>
-						<li><a href="#">Advertise</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-					<h3>Legal</h3>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Developers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
-					</ul>
-				</div>
-			</div>
-
+				
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
+						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a> &amp; <a href="https://www.pexels.com/" target="_blank">Pexels</a></small>
 					</p>
 				</div>
 			</div>
-
 		</div>
 	</footer>
+	
 	</div>
 
 	<div class="gototop js-top">
