--- a/objawy.html
+++ b/objawy.html
@@ -226,9 +226,8 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 animate-box">
                 <div class="date-counter text-center">
-                    <h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+                    <h2>Co prawie dwie godziny jedna kobieta w Polsce odkrywa nowotwór jajnika:</h2>
                     <div class="simply-countdown simply-countdown-one"></div>
-                    <p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
                 </div>
             </div>
         </div>
